lab11/zad3/zad3-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: zad3-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/zad3-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/zad3-default: "true"
